Added to index.html and styles.css

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Enos Adjabeng | WDD 130</title>
+        <meta name="description" content="My name is Enos Adjabeng. I'm studying Web Development and the purpose of this page is to be able to share thoughts on why it is important to serve a full time mission.">
+        <meta name="author" content="Enos Adjabeng">
     </head>
     <body>
         <header>
@@ -18,8 +20,13 @@
                 Enos Adjabeng | WDD 130
             </h1>
             <img src="images/profile.jpg" alt="Hello, my name is Enos Adjabeng" width="200">
-            <p>Hello! My name is Enos Adjabeng and I am from Accra, Ghana. I love playing basketball and do love programming. I decided to study programming because I love it and want to know more about it. I later noticed that even though you have love something if you do not spend time with it you will surely lose it. This lesson came when I started learning programming and had less time to practice. This experiance has taught me a great lesson that I will not forget.</p>
+            <p>Hello! My name is Enos Adjabeng and I am from Accra, Ghana. I love playing basketball and do love programming. I decided to study programming because I love it and want to know more about it. I later noticed that even though you love something if you do not spend time with it you will surely lose it. This lesson came when I started learning programming and had less time to practice. This experiance has taught me a great lesson that I will not forget.</p>
         </main>
+        <aside>
+            <h2>Ghana</h2>
+            <img src="images/Independence_Arch_-_Accra,_Ghana.jpg" alt="Independence_Arch_-_Accra,_Ghana">
+            <p>Accra has an estimated population of 4—5 million in the metropolitan area. Since an administration reform in 2018 the city itself comprises only of the historic quarters and houses around 280,000 people. However, the surrounding municipal districts are tightly connected to the Accra Metropolitan District. Usually the whole metropolitan area is referred to as "Accra". The local language is Ga; other widely spoken languages are English, Twi (pron. 'ch-wee'), Ewe (pron. ayvay), and Hausa.</p>
+        </aside>
         <footer>
             <p>©️2024 🌍 Enos Adjabeng 🌍 Accra, Ghana</p>
         </footer>
